Fixed minor bug pertaining to legend z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ main {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
+	z-index: 2;
 	top: 0;
 	left: 0;
 	bottom: 0;	
@@ -294,7 +294,7 @@ main {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	
+	z-index: 2;
 	top: 0;
 	right: 0;
 	bottom: 0;
